--- a/client/src/components/header/style.css
+++ b/client/src/components/header/style.css
@@ -1,6 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 .navbar{
-    background-color: #4267b2 !important;
-    border-bottom: 1px solid #fff;
+    border-bottom:2px solid #4267b2 !important;
+    ;
+    border-left:2px solid #4267b2 !important;
+    border-bottom-left-radius: 50px ;
+    background-image: linear-gradient(
+    45deg,
+    rgb(65, 88, 208) 0%,
+    rgb(200, 80, 192) 50%,
+    rgb(255, 204, 112) 100%
+  ) !important;
+   
+    
+}
+.header{
+    border-bottom:5px solid #4267b2 !important;
+    border-right:5px solid #4267b2 !important;
+    border-left:5px solid #4267b2 !important;
+    border-bottom-left-radius: 50px ;
     
 }
 .nav-item{
@@ -10,12 +27,18 @@
     
 
 }
-.nav-item:hover {
+/* .nav-item:hover {
     background-color: rgb(127, 190, 245);
     text-align: center;
-}
+} */
 .navbar-brand{
-    color: aliceblue !important;
+    color: rgb(250, 250, 250) !important;
+    font-weight: 900;
+    margin-left: 30px !important;
+    font-family: 'Lobster', cursive;
+    border: 3px solid #fff;
+    padding: 10px !important;
+    border-radius: 50px;
 }
 .material-icons{
     color: rgb(4, 4, 237) !important;
@@ -24,7 +47,15 @@
 .dropdown-menu{
     width: 300px;
 }
-.nav-item-left{
-    background-color: #c2c3c4;
+.nav-item-left:hover{
+    /* background-color: #c2c3c4; */
+    /* border-right: 5px solid #4267b2; */
+    border-radius: 60px;
+    /* width: 200px; */
+    transform:scale(1.5);
 
+}
+.search_form{
+    border:5px solid #4267b2 !important;
+    
 }
