--- a/client/src/components/home/style.css
+++ b/client/src/components/home/style.css
@@ -1,5 +1,10 @@
 .status{
-    background-color: #4267b2 !important;
+    background-image: linear-gradient(
+        45deg,
+        rgb(65, 88, 208) 0%,
+        rgb(200, 80, 192) 50%,
+        rgb(255, 204, 112) 100%
+      ) !important;
 }
 .text-danger{
     color: #4267b2 !important ;
