--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -1,5 +1,5 @@
 .status_modal{
-    background-color: rgba(34, 34, 121, 0.406) !important;
+    background-color: rgba(170, 170, 252, 0.406) !important;
 
 }
 .card{
@@ -11,3 +11,8 @@
 .nav-item-icons{
     width: 50px !important;
 } 
+.user-card{
+    border: 3px solid rgba(67, 13, 84, 0.388);
+    margin-top: 5px;
+    border-radius: 5px;
+}
